--- a/src/app/components/queue-rack/queue-rack.component.scss
+++ b/src/app/components/queue-rack/queue-rack.component.scss
@@ -13,7 +13,8 @@
             color: #333;
             font-size: 18px;
             &:hover {
-                color: #3fae2a;
+                // color: #3fae2a;
+                color: #000;
             }
         }
         &.selected {
