--- a/src/app/cluster-container/cluster-container.component.html
+++ b/src/app/cluster-container/cluster-container.component.html
@@ -2,6 +2,9 @@
     <a mat-tab-link [routerLink]="['info']" routerLinkActive="active">
         Cluster Info
     </a>
+    <a mat-tab-link [routerLink]="['jobs']" routerLinkActive="active">
+        Jobs
+    </a>
     <a mat-tab-link [routerLink]="['queues']" routerLinkActive="active">
         Queues
     </a>
