Updated jobs view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="logo">
         <a [routerLink]="['/']">
             <img src="./assets/images/logo.png" />
-            <div class="text-md text-semibold text-uppercase">Unity</div>
+            <div class="text-md text-semibold text-uppercase">Yunikorn</div>
             <div class="text-md text-uppercase">Scheduler</div>
         </a>
     </div>
