--- a/src/app/jobs-view/jobs-view.component.html
+++ b/src/app/jobs-view/jobs-view.component.html
@@ -24,7 +24,7 @@
     </mat-table>
 
     <div class="job-details" *ngIf="selectedRow">
-        <h3>Job Details</h3>
+        <h3>Job Allocations</h3>
         <mat-divider></mat-divider>
 
         <mat-table [dataSource]="allocDataSource" class="mat-elevation-z8">
