--- a/src/app/jobs-view/jobs-view.component.scss
+++ b/src/app/jobs-view/jobs-view.component.scss
@@ -34,4 +34,11 @@
             margin-top: 20px;
         }
     }
+    .no-record {
+        font-size: 14px;
+        font-weight: bold;
+        color: #666;
+        width: 100%;
+        text-align: center;
+    }
 }
