Refactored all job labels into application

--- a/src/app/components/cluster-container/cluster-container.component.html
+++ b/src/app/components/cluster-container/cluster-container.component.html
@@ -2,8 +2,8 @@
     <a mat-tab-link [routerLink]="['info']" routerLinkActive="active">
         Cluster Info
     </a>
-    <a mat-tab-link [routerLink]="['jobs']" routerLinkActive="active">
-        Jobs
+    <a mat-tab-link [routerLink]="['apps']" routerLinkActive="active">
+        Applications
     </a>
     <a mat-tab-link [routerLink]="['queues']" routerLinkActive="active">
         Queues
