--- a/src/app/components/job-history/job-history.component.html
+++ b/src/app/components/job-history/job-history.component.html
@@ -1,6 +1,6 @@
 <mat-card class="box-card">
     <mat-card-header>
-        <mat-card-title>Job History</mat-card-title>
+        <mat-card-title>Application History</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <div class="history-wrapper">
