--- a/src/app/components/job-status/job-status.component.html
+++ b/src/app/components/job-status/job-status.component.html
@@ -1,6 +1,6 @@
 <mat-card class="box-card">
     <mat-card-header>
-        <mat-card-title>Job Status</mat-card-title>
+        <mat-card-title>Application Status</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <div class="status-wrapper flex-grid">
