YUNIKORN-38. YuniKorn UI behaves incorrectly when max resource is not set

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <a [routerLink]="['/']">
       <img src="./assets/images/logo.png" />
       <div class="text-md text-semibold text-uppercase">Yunikorn</div>
-      <div class="text-md text-uppercase">Scheduler</div>
+      <div class="text-md text-uppercase">Web UI</div>
     </a>
   </div>
   <ul class="navigation-primary">
