--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -100,7 +100,7 @@
 }
 
 .logo div + div {
-  margin-top: 5px;
+  margin-top: 0px;
 }
 
 .text-md {
@@ -131,8 +131,6 @@
 }
 
 ul.navigation-primary {
-  margin-top: 10px;
-
   overflow-y: auto;
   height: calc(100vh - 110px);
 }
@@ -143,9 +141,14 @@ ul.navigation-primary {
   padding: 0;
   overflow-x: hidden;
 }
+
 .navigation > ul {
   margin-top: 10px;
+  &:first-of-type {
+    margin-top: 0;
+  }
 }
+
 .navigation li:hover > a {
   color: #fff;
   background: #404351;
