--- a/src/app/components/queue-rack/queue-rack.component.scss
+++ b/src/app/components/queue-rack/queue-rack.component.scss
@@ -13,7 +13,6 @@
       color: #333;
       font-size: 18px;
       &:hover {
-        // color: #3fae2a;
         color: #000;
       }
     }
@@ -39,7 +38,7 @@
 .queue-rack {
   padding: 20px 0px 20px 10px;
   border-right: 1px solid #ddd;
-  height: 580px;
+  height: calc(100vh - 230px);
   max-width: 236px;
   .queue-item:last-child {
     margin-bottom: 0;
