YUNIKORN-50: Yunikorn logo changes in yunikorn-web

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,7 @@
   <div class="logo">
     <a [routerLink]="['/']">
       <img src="./assets/images/logo.png" />
-      <div class="text-md text-semibold text-uppercase">Yunikorn</div>
-      <div class="text-md text-uppercase">Web UI</div>
+      <div class="text-md text-semibold">YuniKorn</div>
     </a>
   </div>
   <ul class="navigation-primary">
