YUNIKORN-65. Remove job references from the web app

--- a/src/app/components/app-history/app-history.component.html
+++ b/src/app/components/app-history/app-history.component.html
@@ -1,4 +1,4 @@
-/**
+<!--
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -14,22 +14,15 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ -->
 
-import { Component, OnInit, Input } from '@angular/core';
-
-import { AreaDataItem } from '@app/models/area-data.model';
-
-@Component({
-  selector: 'app-job-history',
-  templateUrl: './job-history.component.html',
-  styleUrls: ['./job-history.component.scss']
-})
-export class JobHistoryComponent implements OnInit {
-  @Input()
-  chartData: AreaDataItem[];
-
-  constructor() {}
-
-  ngOnInit() {}
-}
+<mat-card class="box-card">
+  <mat-card-header>
+    <mat-card-title>Application History</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div class="history-wrapper">
+      <app-area-chart [data]="chartData" tooltipLabel="Running Applications"></app-area-chart>
+    </div>
+  </mat-card-content>
+</mat-card>
