--- a/src/app/components/cluster-info/cluster-info.component.html
+++ b/src/app/components/cluster-info/cluster-info.component.html
@@ -19,10 +19,10 @@
 <div class="cluster-info">
   <div class="flex-grid">
     <div class="left-col flex-primary">
-      <app-job-status [chartData]="jobStatusData"></app-job-status>
+      <app-application-status [chartData]="appStatusData"></app-application-status>
     </div>
     <div class="right-col flex-primary">
-      <app-job-history [chartData]="jobHistoryData"></app-job-history>
+      <app-application-history [chartData]="appHistoryData"></app-application-history>
     </div>
   </div>
   <div class="flex-grid grid-row">
