--- a/src/app/components/container-history/container-history.component.html
+++ b/src/app/components/container-history/container-history.component.html
@@ -22,7 +22,7 @@
   </mat-card-header>
   <mat-card-content>
     <div class="history-wrapper">
-      <app-area-chart [data]="chartData" tooltipLabel="Containers"></app-area-chart>
+      <app-area-chart [data]="chartData" tooltipLabel="Running Containers"></app-area-chart>
     </div>
   </mat-card-content>
 </mat-card>
