[YUNIKORN-93] Queue maximum capacity cleanup

--- a/src/app/components/queues-view/queues-view.component.html
+++ b/src/app/components/queues-view/queues-view.component.html
@@ -73,7 +73,7 @@
             </div>
             <div class="flex-grid item-wrapper">
               <div class="left-item">Absolute Used Capacity:</div>
-              <div class="right-item">{{ selectedQueue.absoluteUsedCapacity }}%</div>
+              <div class="right-item">{{ selectedQueue.absoluteUsedCapacity }}</div>
             </div>
           </div>
         </mat-drawer-content>
