--- a/src/app/components/nodes-view/nodes-view.component.scss
+++ b/src/app/components/nodes-view/nodes-view.component.scss
@@ -1,4 +1,4 @@
-<!--
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -14,21 +14,49 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- -->
+ */
 
-<nav mat-tab-nav-bar>
-  <a mat-tab-link [routerLink]="['info']" routerLinkActive="active">
-    Cluster Info
-  </a>
-  <a mat-tab-link [routerLink]="['apps']" routerLinkActive="active">
-    Applications
-  </a>
-  <a mat-tab-link [routerLink]="['queues']" routerLinkActive="active">
-    Queues
-  </a>
-  <a mat-tab-link [routerLink]="['nodes']" routerLinkActive="active">
-    Nodes
-  </a>
-</nav>
-
-<router-outlet></router-outlet>
+.nodes-view {
+  width: 100%;
+  height: 100%;
+  padding: 25px;
+  .mat-header-cell {
+    font-size: 15px;
+    font-weight: bold;
+    color: #666;
+  }
+  .mat-cell {
+    color: #333;
+  }
+  .mat-row {
+    &:hover {
+      background: #cccccc;
+      cursor: pointer;
+    }
+    &.selected-row {
+      background: #303d54;
+      .mat-cell {
+        color: #fff;
+      }
+    }
+  }
+  .mat-header-cell.indicator-icon,
+  .mat-cell.indicator-icon {
+    max-width: 40px;
+    font-size: 18px;
+    margin-left: 10px;
+  }
+  .node-allocations {
+    margin-top: 40px;
+    .mat-table {
+      margin-top: 20px;
+    }
+  }
+  .no-record {
+    font-size: 14px;
+    font-weight: bold;
+    color: #666;
+    width: 100%;
+    text-align: center;
+  }
+}
