--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -56,7 +56,7 @@
 
     <mat-paginator
       #nodesViewMatPaginator
-      [pageSizeOptions]="[5, 10, 20]"
+      [pageSizeOptions]="[5, 10, 20, 50]"
       [ngStyle]="{ display: isNodeDataSourceEmpty() ? 'none' : '' }"
       (page)="onPaginatorChanged($event)"
       showFirstLastButtons
@@ -92,7 +92,7 @@
 
       <mat-paginator
         #allocationMatPaginator
-        [pageSizeOptions]="[5, 10, 20]"
+        [pageSizeOptions]="[5, 10, 20, 50]"
         [ngStyle]="{ display: isAllocDataSourceEmpty() ? 'none' : '' }"
         showFirstLastButtons
       ></mat-paginator>
