--- a/src/app/components/apps-view/apps-view.component.scss
+++ b/src/app/components/apps-view/apps-view.component.scss
@@ -16,7 +16,7 @@
  * limitations under the License.
  */
 
-.jobs-view {
+.apps-view {
   width: 100%;
   height: 100%;
   padding: 25px;
@@ -46,7 +46,7 @@
     font-size: 18px;
     margin-left: 10px;
   }
-  .job-allocations {
+  .app-allocations {
     margin-top: 40px;
     .mat-table {
       margin-top: 20px;
