[YUNIKORN-83] Add a nodes page (#34)
Add a new node page displaying the scheduling nodes.
Side change: removal of the last job references.

Fixes: #34

--- a/src/app/components/cluster-container/cluster-container.component.html
+++ b/src/app/components/cluster-container/cluster-container.component.html
@@ -26,6 +26,9 @@
   <a mat-tab-link [routerLink]="['queues']" routerLinkActive="active">
     Queues
   </a>
+  <a mat-tab-link [routerLink]="['nodes']" routerLinkActive="active">
+    Nodes
+  </a>
 </nav>
 
 <router-outlet></router-outlet>
